# ide4pplc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
forms/: mainwindow.ui
include/: mainwindow.h
lib/: CMakeLists.txt
src/: mainwindow.cpp
